# logto-rs

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: CI.yml
client/: Cargo.toml
core/: Cargo.toml
core/src/: errors.rs  lib.rs  oidc_config.rs
