[package]
name = "logto-core"
authors.workspace = true
description.workspace = true
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

readme.workspace = true
license.workspace = true

repository.workspace = true
documentation.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
