[package]
name = "logto-core"
authors.workspace = true
description.workspace = true
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

readme.workspace = true
license.workspace = true

repository.workspace = true
documentation.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "8.3"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.4"
base64 = "0.21"
